@@ -30,22 +30,26 @@ class TagBuilder;
  * but does not fall back to generic scanners (APE and ID3) if no tags
  * were found (but the file was recognized).
  *
+ * Throws on I/O error.
+ *
  * @return true if the file was recognized (even if no metadata was
  * found)
  */
 bool
-ScanFileTagsNoGeneric(Path path, TagHandler &handler) noexcept;
+ScanFileTagsNoGeneric(Path path, TagHandler &handler);
 
 /**
  * Scan the tags of a song file.  Invokes matching decoder plugins,
  * and falls back to generic scanners (APE and ID3) if no tags were
  * found (but the file was recognized).
  *
+ * Throws on I/O error.
+ *
  * @return true if the file was recognized (even if no metadata was
  * found)
  */
 bool
 ScanFileTagsWithGeneric(Path path, TagBuilder &builder,
-			AudioFormat *audio_format=nullptr) noexcept;
+			AudioFormat *audio_format=nullptr);
 
 #endif
