@@ -29,29 +29,39 @@ class TagBuilder;
  * Scan the tags of an #InputStream.  Invokes matching decoder
  * plugins, but does not invoke the special "APE" and "ID3" scanners.
  *
+ * Throws on I/O error.
+ *
  * @return true if the file was recognized (even if no metadata was
  * found)
  */
 bool
-tag_stream_scan(InputStream &is, TagHandler &handler) noexcept;
+tag_stream_scan(InputStream &is, TagHandler &handler);
 
+/**
+ * Throws on I/O error.
+ */
 bool
-tag_stream_scan(const char *uri, TagHandler &handler) noexcept;
+tag_stream_scan(const char *uri, TagHandler &handler);
 
 /**
  * Scan the tags of an #InputStream.  Invokes matching decoder
  * plugins, and falls back to generic scanners (APE and ID3) if no
  * tags were found (but the file was recognized).
  *
+ * Throws on I/O error.
+ *
  * @return true if the file was recognized (even if no metadata was
  * found)
  */
 bool
 tag_stream_scan(InputStream &is, TagBuilder &builder,
-		AudioFormat *audio_format=nullptr) noexcept;
+		AudioFormat *audio_format=nullptr);
 
+/**
+ * Throws on I/O error.
+ */
 bool
 tag_stream_scan(const char *uri, TagBuilder &builder,
-		AudioFormat *audio_format=nullptr) noexcept;
+		AudioFormat *audio_format=nullptr);
 
 #endif
